add missing translation and rename skyocean.<>.keybind to skyocean.keybind.<>
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/zh_cn.json
+++ b/src/lang/zh_cn.json
@@ -547,10 +547,8 @@
         "reset": "重置"
       }
     },
-    "item_search": {
-      "keybind": "物品搜索"
-    },
-    "item_value": {
-      "keybind": "物品价值"
+    "keybind": {
+      "item_search": "物品搜索",
+      "item_value": "物品价值"
     }
   }
