--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -17,7 +17,7 @@
         "desc": [
           "The mod may change the appearance of an item (or other visual components), by for example manipulating it's tooltip.",
           "",
-          "If such a modification is present there will be a <color #355AA0>\uD83C\uDF0A</color> prefix, this is done to help identify the origin of any changes and therefore can't be disabled."
+          "If such a modification is present there will be a <color #355AA0>\uD83C\uDF0A</color> prefix (or whatever modify indicator is selected), this is done to help identify the origin of any changes and therefore we advise against disabling it."
         ]
       },
       "text_shadow": {
@@ -27,6 +27,17 @@
       "prefix_gradient": {
         "@value": "Prefix Gradient",
         "desc": "Changes the gradient that is used for the prefix."
+      },
+      "modify_indicator": {
+        "@value": "SkyOcean Modify Indicator",
+        "desc": [
+          "Items modified or added by SkyOcean will have a small indicator (normally <color #355AA0>\uD83C\uDF0A</color>) in their name.",
+          "This indicator can be customized here."
+        ],
+        "prefix": "Prefix in name",
+        "suffix": "Suffix in name",
+        "lore": "First line in lore",
+        "nothing": "No indicator"
       },
       "debug": {
         "@value": "Enable Debug Mode",
@@ -432,7 +443,7 @@
       "modifications": {
         "@value": "Lore Modifications",
         "desc": [
-          "All items that have any modification present in the lore are prefixed with <color #355AA0>\uD83C\uDF0A</color>",
+          "All items that have any modification present in the lore are indicated with the selected modify indicator.",
           "To list all modifications that are present press <gray>shift</gray>.",
           "",
           "Some of the settings may include examples, <italic><gray>hover</gray></italic> them to see them."
