feat: bobber alive time (#84)
* feat: bobber alive time

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

* bobber scale compat

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

---------

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -403,6 +403,10 @@
         "@value": "Bobber Fix",
         "desc": "Fixes bobbers rubberbanding when fishing."
       },
+      "bobber_time": {
+        "@value": "Bobber Time",
+        "desc": "Shows the time your bobber has existed."
+      },
       "hide_other_bobbers": {
         "@value": "Hide Other Bobbers",
         "desc": "Hides other players' bobbers, making it easier to see your own."
