feat: Crafthelper set keybind (#105)
* feat: Add Set Crafthelper Keybind

* Revert "stuff"

This reverts commit ff4b5b9a50ac48853eb5ce938b00093f9c7bd8ed.

* Refresh

* First rei test (no worky)

* It works in item list now but recipe viewer still doesnt work :(

* Ok this works

* unneeded

* Chat feedback

* Uhh i think like this :3

* stop build fail

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

* add missing translation and rename skyocean.<>.keybind to skyocean.keybind.<>

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

* Peak mona suggestion thanks mona @meowora

Co-authored-by: Mona <59416038+meowora@users.noreply.github.com>

---------

Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>
Co-authored-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>
Co-authored-by: Mona <59416038+meowora@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -681,11 +681,10 @@
       "reset": "Reset"
     }
   },
-  "item_search": {
-    "keybind": "Item Search"
-  },
-  "item_value": {
-    "keybind": "Item Value"
+  "keybind": {
+    "item_search": "Open Item Search",
+    "item_value": "Open Item Value",
+    "craft_helper": "Set as active Craft Helper Item"
   },
   "gradients": {
     "default": "Default",
