fix: crafthelper keybind translation
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -684,7 +684,7 @@
   "keybind": {
     "item_search": "Open Item Search",
     "item_value": "Open Item Value",
-    "craft_helper": "Set as active Craft Helper Item"
+    "crafthelper": "Set as active Craft Helper Item"
   },
   "gradients": {
     "default": "Default",
