--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -622,6 +622,10 @@
           "<yellow>Click to view tasks!</yellow>'>Off</hover></red>"
         ]
       },
+      "armadillo_blocks_walked": {
+        "@value": "Prehistoric egg blocks walked",
+        "desc": "Shows how many blocks you have walked so far on a prehistory egg."
+      },
       "storage_preview": {
         "@value": "Storage Preview",
         "desc": "Previews the contents of your backpacks and ender chest in the tooltip."
