feat: clickable chat message prefix
Signed-off-by: J10a1n15 <45315647+j10a1n15@users.noreply.github.com>

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -29,6 +29,10 @@
           "@value": "Prefix Gradient",
           "desc": "Changes the gradient that is used for the prefix."
         },
+        "clickable_prefix": {
+          "@value": "Clickable Chat Message Prefix",
+          "desc": "Makes SkyOceans chat message prefix clickable, opening the config screen."
+        },
         "modify_indicator": {
           "@value": "SkyOcean Modify Indicator",
           "desc": [
