feat(MoongladeBeacon): change moonglade beacon color when active/inactive

--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -725,6 +725,10 @@
             "desc": "Mutes all phantoms making them not induce ear pain.",
             "warning": "<yellow>SkyOcean mutes the phantom sounds by default, if you wish to change this open the config and search for <gold>Mute the Phantoms</gold>!"
           },
+          "moongladeBeaconColor": {
+            "@value": "Moonglade Beacon Color",
+            "desc": "Changes the Moonglade Beacon beam color in Galatea to <red>Red</red> if it's inactive, and <green>green</green> if its active."
+          },
           "shulkerOverwrite": {
             "@value": "Retexture shulker",
             "desc": "Recolors the shulkers to make them more visible."
