--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -459,47 +459,72 @@
         },
         "fun": {
           "@value": "Fun",
-          "player_cats": {
-            "@value": "Player Cats",
+          "player_animals": {
+            "@value": "Player Animals",
             "desc": [
-              "Changes players in the world to cats!",
+              "Changes players in the world to be rendered as the selected animal!",
               "You can choose between <white>Nobody</white>, <white>Self</white>, <white>Players (non NPCs)</white> and <white>Everyone</white>."
             ],
+            "type": {
+              "@value": "Animal Type",
+              "desc": "The animal to use as substitution for players."
+            },
+            "config": {
+              "@value": "Animal Settings",
+              "desc": "Allows you to modify the appearance of an animal, if supported!",
+              "own_collar": {
+                "@value": "Own Collar Color",
+                "desc": "The collar color that is used for yourself."
+              },
+              "other_collar": {
+                "@value": "Other Collar Color",
+                "desc": "The Collar Color that is used for others."
+              }
+            },
+            "cat": {
+              "own_variant": {
+                "@value": "Own Cat Variant",
+                "desc": "Changes the cat variant that is used for yourself!"
+              },
+              "other_variant": {
+                "@value": "Other Cat Variant",
+                "desc": "Changes the cat variant that is used for others!"
+              },
+              "variant": {
+                "default": "Random",
+                "tabby": "Tabby",
+                "black": "Black",
+                "red": "Red",
+                "siamese": "Siamese",
+                "british_shorthair": "British Shorthair",
+                "calico": "Calico",
+                "persian": "Persian",
+                "ragdoll": "Ragdoll",
+                "white": "White",
+                "jellie": "Jellie",
+                "all_black": "All Black"
+              }
+            },
+            "fox": {
+              "own_variant": {
+                "@value": "Own Fox Variant",
+                "desc": "Changes the fox variant that is used for yourself!"
+              },
+              "other_variant": {
+                "@value": "Other Fox Variant",
+                "desc": "Changes the fox variant that is used for others!"
+              },
+              "variant": {
+                "random": "Random",
+                "red": "Red",
+                "snow": "Snow"
+              }
+            },
             "state": {
               "none": "Nobody",
               "self": "Self",
               "players": "Players",
               "everyone": "Everyone"
-            },
-            "own_variant": {
-              "@value": "Own Cat Variant",
-              "desc": "Changes the cat variant that is used for yourself!"
-            },
-            "other_variant": {
-              "@value": "Other Cat Variant",
-              "desc": "Changes the car variant used for everyone else!"
-            },
-            "own_collar": {
-              "@value": "Own Collar Color",
-              "desc": "Defines what collar color to use for yourself!"
-            },
-            "other_collar": {
-              "@value": "Other Collar Color",
-              "desc": "Defines what collar color to use for everyone else!"
-            },
-            "variant": {
-              "default": "Random",
-              "tabby": "Tabby",
-              "black": "Black",
-              "red": "Red",
-              "siamese": "Siamese",
-              "british_shorthair": "British Shorthair",
-              "calico": "Calico",
-              "persian": "Persian",
-              "ragdoll": "Ragdoll",
-              "white": "White",
-              "jellie": "Jellie",
-              "all_black": "All Black"
             },
             "color": {
               "default": "Random",
