--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -168,6 +168,14 @@
           "totalLeft": {
             "@value": "Show total amount left",
             "desc": "Displays the total amount that is still required to max a perk."
+          },
+          "reminder": {
+            "@value": "Reminder",
+            "desc": "Lets you add reminders for when you have enough powder to buy a perk."
+          },
+          "reminderTitle": {
+            "@value": "Reminder Title",
+            "desc": "Shows a title when the reminder triggers."
           }
         },
         "ch": {
@@ -723,6 +731,14 @@
           "totalLeft": {
             "@value": "Show total amount left",
             "desc": "Displays the total amount that is still required to max a perk."
+          },
+          "reminder": {
+            "@value": "Reminder",
+            "desc": "Lets you add reminders for when you have enough whispers to buy a perk."
+          },
+          "reminderTitle": {
+            "@value": "Reminder Title",
+            "desc": "Shows a title when the reminder triggers."
           }
         },
         "galatea": {
