--- a/src/lang/en_us.json
+++ b/src/lang/en_us.json
@@ -482,23 +482,23 @@
               "desc": "Allows you to modify the appearance of an animal, if supported!",
               "own_collar": {
                 "@value": "Own Collar Color",
-                "desc": "The collar color that is used for yourself."
+                "desc": "The collar color used for yourself."
               },
               "other_collar": {
                 "@value": "Other Collar Color",
-                "desc": "The Collar Color that is used for others."
+                "desc": "The collar color used for others."
               },
               "own_baby": {
                 "@value": "Is Own Baby",
                 "desc": [
-                  "Whether to use a baby model for yourself or not.",
+                  "Whether to use a baby model for yourself.",
                   "<yellow>This might cause rendering issues on some models!"
                 ]
               },
               "other_baby": {
                 "@value": "Are Others Baby",
                 "desc": [
-                  "Whether to use a baby model for others or not.",
+                  "Whether to use a baby model for others.",
                   "<yellow>This might cause rendering issues on some models!"
                 ]
               }
@@ -506,11 +506,11 @@
             "cat": {
               "own_variant": {
                 "@value": "Own Cat Variant",
-                "desc": "Changes the cat variant that is used for yourself!"
+                "desc": "Changes the cat variant used for yourself."
               },
               "other_variant": {
                 "@value": "Other Cat Variant",
-                "desc": "Changes the cat variant that is used for others!"
+                "desc": "Changes the cat variant used for others."
               },
               "variant": {
                 "default": "Random",
@@ -530,11 +530,11 @@
             "fox": {
               "own_variant": {
                 "@value": "Own Fox Variant",
-                "desc": "Changes the fox variant that is used for yourself!"
+                "desc": "Changes the fox variant used for yourself."
               },
               "other_variant": {
                 "@value": "Other Fox Variant",
-                "desc": "Changes the fox variant that is used for others!"
+                "desc": "Changes the fox variant used for others."
               },
               "variant": {
                 "random": "Random",
@@ -545,19 +545,19 @@
             "wolf": {
               "own_variant": {
                 "@value": "Own Wolf Variant",
-                "desc": "Changes the wolf variant that is used for yourself!"
+                "desc": "Changes the wolf variant used for yourself."
               },
               "other_variant": {
                 "@value": "Other Wolf Variant",
-                "desc": "Changes the wolf variant that is used for others!"
+                "desc": "Changes the wolf variant used for others."
               },
               "own_state": {
                 "@value": "Own Wolf State",
-                "desc": "Changes the wolf state that is used for yourself!"
+                "desc": "Changes the wolf state used for yourself."
               },
               "other_state": {
                 "@value": "Other Wolf State",
-                "desc": "Changes the wolf state that is used for others!"
+                "desc": "Changes the wolf state used for others."
               },
               "variant": {
                 "random": "Random",
@@ -656,11 +656,11 @@
             "frog": {
               "own_variant": {
                 "@value": "Own Frog Variant",
-                "desc": "Changes the frog variant that is used for yourself!"
+                "desc": "Changes the frog variant used for yourself."
               },
               "other_variant": {
                 "@value": "Other Frog Variant",
-                "desc": "Changes the frog variant that is used for others!"
+                "desc": "Changes the frog variant used for others."
               },
               "variant": {
                 "random": "Random",
@@ -671,12 +671,12 @@
             },
             "mooshroom": {
               "own_variant": {
-                "@value": "Own Mushroom Cow Variant",
-                "desc": "Changes the frog variant that is used for yourself!"
+                "@value": "Own Mooshroom Cow Variant",
+                "desc": "Changes the mooshroom variant used for yourself."
               },
               "other_variant": {
-                "@value": "Other Mushroom Cow Variant",
-                "desc": "Changes the frog variant that is used for others!"
+                "@value": "Other Mooshroom Cow Variant",
+                "desc": "Changes the mooshroom variant used for others."
               },
               "variant": {
                 "random": "Random",
@@ -757,37 +757,37 @@
             "snow_golem": {
               "own_pumpkin": {
                 "@value": "Own Snow Golem Pumpkin State",
-                "desc": "Changes the snow golem pumpkin state that is used for yourself!"
+                "desc": "Changes the snow golem’s pumpkin state for yourself."
               },
               "other_pumpkin": {
                 "@value": "Other Snow Golem Pumpkin State",
-                "desc": "Changes the snow golem pumpkin state that is used for others!"
+                "desc": "Changes the snow golem’s pumpkin state for others."
               }
             },
             "sheep": {
               "own_color": {
                 "@value": "Own Sheep Color",
-                "desc": "Changes the sheep color that is used for yourself!"
+                "desc": "Changes the sheep color used for yourself."
               },
               "other_color": {
                 "@value": "Other Sheep Color",
-                "desc": "Changes the sheep color that is used for others!"
+                "desc": "Changes the sheep color used for others."
               },
               "own_jeb": {
                 "@value": "Own Jeb",
-                "desc": "Whether yourself is a jeb sheep or not."
+                "desc": "Whether you are a jeb_ sheep."
               },
               "other_jeb": {
                 "@value": "Other Jeb",
-                "desc": "Whether yourself is a jeb sheep or not."
+                "desc": "Whether others are jeb_ sheep."
               },
               "own_sheared": {
                 "@value": "Own Sheared",
-                "desc": "Whether yourself is sheared or not."
+                "desc": "Whether you are sheared."
               },
               "other_sheared": {
                 "@value": "Other Sheared",
-                "desc": "Whether yourself is sheared or not."
+                "desc": "Whether others are sheared."
               }
             },
             "tropical_fish": {
@@ -908,11 +908,11 @@
             "bogged": {
               "own_sheared": {
                 "@value": "Own Sheared",
-                "desc": "Whether yourself is sheared or not."
+                "desc": "Whether you are sheared."
               },
               "other_sheared": {
                 "@value": "Other Sheared",
-                "desc": "Whether yourself is sheared or not."
+                "desc": "Whether others are sheared."
               }
             },
             "shulker": {
@@ -959,15 +959,13 @@
               "black": "<black>Black"
             },
             "entity_overwrite": {
-              "@value": "Entity Overwrite",
               "desc": [
-                "Changes the entity that is used, by default it's cats.",
-                "<italic><white>Note that settings like variant and collar won't work for non cat models!"
+                "Changes the entity that is used (by default cats).",
+                "<italic><white>Note that settings like variant and collar won’t work for non-cat models!</white></italic>"
               ]
             },
             "outside_skyblock": {
-              "@value": "Allow outside skyblock",
-              "desc": "Whether player animals should also be visible outside of skyblock."
+              "desc": "Whether player animals should also be visible outside of SkyBlock."
             }
           }
         }
@@ -1172,7 +1170,7 @@
         "compact_level_bars": {
           "@value": "Compact Level Bars",
           "desc": [
-            "Compacts the bars in the skyblock levels menu into one line, making them fit on smaller screens.",
+            "Compacts the bars in the SkyBlock levels menu into one line, making them fit on smaller screens.",
             "",
             "Example: <green><hover '<color #355AA0>\uD83C\uDF0A</color> <dark_aqua>Dungeon Tasks</dark_aqua>",
             "<dark_gray>3 Tasks</dark_gray>",
